always load about-distro in ctor

Summary:
otherwise get a noticable delay during which we show dummy data. since
we only access on-disk content and only very little of it loading via ctor
should have next to no impact.

BUG: 366158

Reviewers: cfeck, sebas

Reviewed By: sebas

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D2300